tests/test_assets/semantic/invalid/declarations/floating_constant_errors.cog
F32_OVERFLOW: f32 : 340282366920938463463374607431768211456.0;
F32_DIVIDE_ZERO: f32 : cast(f32, 1.0) / cast(f32, 0.0);
